--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -318,3 +318,36 @@ div.overview li:hover {
 /*  border: 1px solid #5f5f5f;*/
 }
 
+/* CONTROL PANEL USERBAR ICONS */
+#userbar a { border-bottom: 1px dotted #555; color:#444; text-shadow: 0 1px 1px #e5e5e5; }
+#userbar a:hover { border-bottom: 1px solid #555; color:#fff; text-shadow: 0 -1px 0px #444; }
+
+#userbar { line-height: 45px; position: absolute; right: 0; z-index: 100; margin: 0 5px; }
+#userbar-container { background-color:#aaa; padding:2px 0px 7px 3px; border:1px solid #a0a0a0; -moz-border-radius:2px; -webkit-border-radius:2px; }
+#userbar-container {  -moz-box-shadow: 0px 0px 0px #000 inset; background: #ccc }
+
+#userbar span.userbar-icon { display: inline-block; color:#444; font-weight:bold; font-size:11px; cursor:default; margin-right:10px;  z-index:2;}
+#userbar span.userbar-icon:before { vertical-align:-50%; line-height:10px; padding-right:1px; }
+#userbar span.home-icon:before { content:url(../images/control-panel-home.png); }
+#userbar span.user-icon:before { content:url(../images/control-panel-user.png); }
+#userbar span.language-icon {color:#e9e9e9; -moz-border-radius:2px; -webkit-border-radius:2px; padding:2px 3px 2px 6px; text-align:center; margin-right:4px; background-color:#999; text-shadow: 0 0px 0px #444; }
+#userbar span.logout-icon:before { content:url(../images/control-panel-logout.png); }
+
+span.plugin-shortcut { display:inline-block; background: url(../icons/plugin-icons.png) no-repeat top left;  width: 48px; height: 48px; }
+span.icon-monitoring{ background-position: 0 0;}
+span.icon-yast-firewall{ background-position: 0 -98px; }
+span.icon-yast-groups{ background-position: 0 -196px; }
+span.icon-yast-kerberos{ background-position: 0 -294px; }
+span.icon-yast-ldap{ background-position: 0 -392px; }
+span.icon-yast-mail-server{ background-position: 0 -490px; }
+span.icon-yast-network{ background-position: 0 -588px; }
+span.icon-yast-ntp-client{ background-position: 0 -686px; }
+span.icon-yast-online_update{ background-position: 0 -784px; }
+span.icon-yast-permissions{ background-position: 0 -882px; }
+span.icon-yast-product-registration{ background-position: 0 -980px; }
+span.icon-yast-samba-client{ background-position: 0 -1078px; }
+span.icon-yast-sw_source{ background-position: 0 -1176px; }
+span.icon-yast-system-user{ background-position: 0 -1274px; }
+span.icon-yast-system{ background-position: 0 -1372px; }
+span.icon-yast-users{ background-position: 0 -1470px; }
+
