--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -21,9 +21,12 @@
 
 <%= javascript_include_tag :defaults %>
 
-<% if RAILS_ENV == 'development' %>
-  <%= javascript_include_tag "jquery.quicksearch.js" %>
-<% end %>
+  <% if JSMIN == false %>
+    <%= stylesheet_link_tag "webyast-services" %>
+    <%= stylesheet_link_tag "webyast-plugin-toolbar" %>
+    <%= javascript_include_tag "jquery.quicksearch.js"-%>
+  <% end %>
+
 
 <% javascript_tag do %>
   var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
@@ -190,221 +193,183 @@ function enable_buttons (s) {
     .pad1_2em { padding: 1em 2em; }
 </style>
 
-<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %><span id="questionMark">?</span></div>
+<!-- <div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %><span id="questionMark">?</span></div>
+<div class="plugin-content"> -->
 
-<div class="plugin-content">
-
-<% unless @permissions[:execute] %>
-  <div id="heading" class="pad1_2em">
-    <p class="missing-permissions"><%=_("You do not have permission to execute the services.")%></p> <!-- RORSCAN_ITL -->
-  </div>
-<% end %>
-
-<!--<p>
-    <label for="filter"><%=_("Filter services")%></label>
-    <%= select_tag "filter", options_for_select([
-	[ _("All"), "all"],
-	[ _("Running"), "running"],
-	[ _("Not Running"), "not-running"],
-	[ _("Dead"), "dead"],
-	[ _("Started on Boot"), "enabled"],
-	[ _("Not Started on Boot"), "disabled"],
-    ])
-    %>
-    <%= observe_field("filter", :function => "select_status(value)") %>
-</p>-->
-
-<!--<form action="#" id="quicksearch">
-  <label><%= _("Quick Search") %></label>
-  <input type="text" id="service_search">
-</form>-->
-
-<!--</div>-->
-
-<div id="systembar">
-  <div id="home-container">
-    <div id="home">		
-      <%=link_to image_tag ("home.png", :id=>"home_image"), :controller=>"controlpanel", :action => :index %>
+<div class="plugin-content plugin-border">
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/repositories.png"></label>
+      <label class="plugin-name"><%= _("System Services") %></label>
+      <span id="questionMark" style="margin:0px 5px; float:right;">?</span>
     </div>
   </div>
-  <span style="clear:both; overflow:hidden;"></span>
-  <div id="search-container">
+
+  <div class="clearfix">&nbsp;</div>
+
+
+  <% unless @permissions[:execute] %>
+    <div id="heading" class="pad1_2em">
+      <p class="missing-permissions"><%=_("You do not have permission to execute the services.")%></p> <!-- RORSCAN_ITL -->
+    </div>
+  <% end %>
+
+  <div id="webyast-toolbar-container">
+    <%=link_to image_tag("home.png", :class=>"home-icon"), :controller=>"controlpanel", :action => :index %>
+
     <form action="#" id="quicksearch">
       <label><%= _("Quick Search") %></label>
       <input type="text" id="service_search">
     </form>
-    <!--<form action="#" id="quicksearch">
-      <label><%= _("Quick Search") %></label>
-	<input type="text" id="repo_search">	
-      </form>-->
+    
+    <!-- <span id="action_link_container"> -->
+      <label for="filter">
+        <%=_("Filter services")%>
+        <% image_tag("/images/filter.png")%>
+      </label>
+      <%= select_tag "filter_services", options_for_select([
+        [ _("All"), "all"],
+        [ _("Running"), "running"],
+        [ _("Not Running"), "not-running"],
+        [ _("Dead"), "dead"],
+        [ _("Started on Boot"), "enabled"],
+        [ _("Not Started on Boot"), "disabled"],
+        ])
+      %>
+      <%= observe_field("filter_services", :function => "select_status(value)") %>
+<!--    </span> -->
   </div>
-  <span style="clear:both; overflow:hidden;"></span>
-  <!--<div id="link-container">
-    <div id="action_links" class="action_links">	
-      <%=link_to image_tag ("/icons/yast-online_update.png", :class=>"icons") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
-    </div>
-  </div>-->
-  <div id="filter-container">
-     <label for="filter">
-      <%=_("Filter services")%>
-      <%=image_tag ("/images/filter.png", :style=>"vertical-align:text-top; margin-top:2px; margin-right:5px;width:16px; height:14px;")%>
-     </label>
-    <%= select_tag "filter", options_for_select([
-	[ _("All"), "all"],
-	[ _("Running"), "running"],
-	[ _("Not Running"), "not-running"],
-	[ _("Dead"), "dead"],
-	[ _("Started on Boot"), "enabled"],
-	[ _("Not Started on Boot"), "disabled"],
-    ])
-    %>
-    <%= observe_field("filter", :function => "select_status(value)") %>
-<!--
-    <label for="filter">
-      <%=  _("Filter repositories") %>
-      <%=image_tag ("/images/filter.png", :style=>"vertical-align:text-top; margin-top:1px; margin-right:3px;width:16px; height:14px;")%>
-    </label>
-    <%= select_tag "filter", options_for_select([
-	[ _("All"), "all"],
-	[ _("Enabled"), "enabled"],
-	[ _("Disabled"), "disabled"]
-      ])
-    %>
-    <%= observe_field("filter", :function => "select_repositories(value)") %>-->
-  </div>
-</div>
-<div style="clear:both; overflow:hidden;"></div>
 
+  <div style="clear:both; overflow:hidden;"></div>
+  
+  <div id="services" class="accordion">
+    <% commands	= [ "start", "stop", "restart", "enable", "disable"] 
+      @services.each do |service| %>
+        <div class="list-fieldset">
+          <div class="list-fieldset-header" name=<%=service.name%>><span class="service-icon"></span><%=h service.name %><em style="position:absolute; left:25%"><%= h service.summary%></em></div>
+          <div class='service-content' style="display:none; padding-left: 1em;">
 
+          <p class='description quicksearch_content'>
+            <i><%= service.description ? h(service.description) : _("Description for service is not available") %></i>
+            <!-- This is a workaround for quicksearch plugin - it can search in _one_ element
+              so we add the service name and summary here again and make it hidden so it is also
+              searched but not displayed -->
+            <span style="display: none"><%= h(service.name)+h(service.summary) -%></span>
+          </p>
 
-<div id="services" class="accordion">
-<%
-commands	= [ "start", "stop", "restart", "enable", "disable"]
-@services.each do |service| %>
-  <div class="list-fieldset">
+          <img src="/images/working.gif" class="small-working-icon" id="service_progress_<%=h service.name%>" style="display: none" alt='working...'/>
 
-  <div class="list-fieldset-header" name=<%=service.name%>><span class="service-icon"></span><%=h service.name %><em style="position:absolute; left:25%"><%= h service.summary%></em></div>
+          <span class='service_status' id='service_status_<%= h service.name%>'>
+            <% unless service.status.nil? %>
+            <%= render :partial => 'status', :locals => { :status => service.status, :enabled => service.enabled, :custom => service.custom } %>
+            <% end %>
+          </span>
 
-  <div class='service-content' style="display:none; padding-left: 1em;">
+          <span id='service_refresh_<%= h service.name%>'>
+            <%= url = { 
+                  :controller => :services, 
+                  :id => service.name, 
+                  :action	=> :show_status, :custom	=> service.custom 
+                }
+      
+                link_to_remote _('(refresh)'), 
+                  :update => "service_status_#{service.name}", 
+                  :url => url, 
+                  :loading  => "disable_buttons('#{service.name}');", 
+                  :complete => "toggle_service_info ('#{service.name}'); enable_buttons ('#{service.name}');"
+                %>
+          </span>
 
-  <p class='description quicksearch_content'>
-    <i><%= service.description ? h(service.description) : _("Description for service is not available") %></i>
-    <!-- This is a workaround for quicksearch plugin - it can search in _one_ element
-      so we add the service name and summary here again and make it hidden so it is also
-      searched but not displayed -->
-    <span style="display: none"><%= h(service.name)+h(service.summary) -%></span>
-  </p>
+          <p class="service-buttons">
+            <!--# do not show enable/disable part for custom services -->
+            <% commands.each do |cmd|	if @permissions[:execute] && ! (service.custom && (cmd == "enable" || cmd == "disable")) %>
+              <%= url = {
+                    :id => cmd, 
+                    :action => "execute", 
+                    :service_id => service.name,
+                    :custom => service.custom
+                  }
+                status_url = {
+                    :controler => :services,
+                    :action => :show_status,
+                    :id => service.name,
+                    :custom => service.custom
+                }
+                html_options = {
+                    :class => "button",
+                    :id => cmd + "_" + service.name
+                }
+                html_options[:style] = "display: none" if (cmd == "start" && service.status == 0) || (cmd == "stop" && service.status != 0) ||
+                  (cmd == "enable" && service.enabled) || (cmd == "disable" && !service.enabled) 
 
-  <img src="/images/working.gif" class="small-working-icon"
-    id="service_progress_<%=h service.name%>" style="display: none" alt='working...'/>
+                label = case cmd
+                  when "start" then _("Start")
+                  when "stop" then _("Stop")
+                  when "restart" then _("Restart")
+                  when "enable"	then _("Start on Boot")
+                  when "disable" then _("Do Not Start on Boot")
+                  else cmd
+                  end
 
-  <span class='service_status' id='service_status_<%= h service.name%>'>
-    <% unless service.status.nil? %>
-    <%= render :partial => 'status', :locals => { :status => service.status, :enabled => service.enabled, :custom => service.custom } %>
-    <% end %>
-  </span>
-
-  <span id='service_refresh_<%= h service.name%>'>
-  <%=
-	url	= {
-	    :controller => :services,
-	    :id		=> service.name,
-	    :action	=> :show_status,
-	    :custom	=> service.custom
-	}
-	link_to_remote _('(refresh)'), :update => "service_status_#{service.name}",
-	    :url => url,
-	    :loading  => "disable_buttons('#{service.name}');",
-	    :complete => "toggle_service_info ('#{service.name}'); enable_buttons ('#{service.name}');"
-  %>
-  </span>
-
-  <p class="service-buttons">
-  <% commands.each do |cmd|
-        # do not show enable/disable part for custom services -->
-	if @permissions[:execute] && ! (service.custom && (cmd == "enable" || cmd == "disable")) %>
-	    <%=
-		url	= {
-		    :id		=> cmd, 
-		    :action	=> "execute", 
-		    :service_id	=> service.name,
-		    :custom	=> service.custom
-		}
-		status_url	= {
-		    :controler	=> :services,
-		    :action	=> :show_status,
-		    :id		=> service.name,
-		    :custom	=> service.custom
-		}
-		html_options	= {
-		    :class	=> "button",
-		    :id		=> cmd + "_" + service.name
-		}
-		html_options[:style]	= "display: none" if (cmd == "start" && service.status == 0) || (cmd == "stop" && service.status != 0) ||
-							     (cmd == "enable" && service.enabled) || (cmd == "disable" && !service.enabled) 
-
-		label = case cmd
-		  when "start" then _("Start")
-		  when "stop" then _("Stop")
-		  when "restart" then _("Restart")
-		  when "enable"	then _("Start on Boot")
-		  when "disable" then _("Do Not Start on Boot")
-		  else cmd
-		end
-
-		complete   	= remote_function(:update => "service_status_#{service.name}",
-                       :url => status_url,
-                       :complete => "toggle_service_info ('#{service.name}'); $('#service_result_#{service.name}').show(); enable_buttons('#{service.name}')"
+                complete = remote_function(:update => "service_status_#{service.name}",
+                    :url => status_url,
+                    :complete => "toggle_service_info ('#{service.name}'); $('#service_result_#{service.name}').show(); enable_buttons('#{service.name}')"
                 )
 
-		# dependent services must also update status
-		if (cmd == "start" || cmd == "restart" || cmd == "enable")
-		  service.required_for_start.each do |required|
-		    complete	= complete + ";" + remote_function(
-			:update		=> "service_status_#{required}",
-			:url		=> {
-			    :controler	=> :services,
-			    :action	=> :show_status,
-			    :id		=> required
-			},
-			:complete	=> "toggle_service_info ('#{required}')"
-		    )
-		  end
-		elsif (cmd == "stop" || cmd == "disable")
-		  service.required_for_stop.each do |required|
-		    complete	= complete + ";" + remote_function(
-			:update		=> "service_status_#{required}",
-			:url		=> {
-			    :controler	=> :services,
-			    :action	=> :show_status,
-			    :id		=> required
-			},
-			:complete	=> "toggle_service_info ('#{required}')"
-		    )
-		  end
-		end
+                # dependent services must also update status
+                if (cmd == "start" || cmd == "restart" || cmd == "enable")
+                  service.required_for_start.each do |required|
+                  complete = complete + ";" + remote_function(
+                    :update => "service_status_#{required}",
+                    :url => {
+                      :controler => :services,
+                      :action => :show_status,
+                      :id => required
+                    },
+                    :complete	=> "toggle_service_info ('#{required}')"
+                  )
+                end
 
-		link_to_remote label,
-		    :url	=> url,
-		    :loading	=> "disable_buttons('#{service.name}');",
-		    :complete   => complete,
-		    :html	=> html_options,
-		    :update	=> "service_result_#{service.name}"
-	    %>
-	<%
-	end
-     end %>
+                elsif (cmd == "stop" || cmd == "disable")
+                  service.required_for_stop.each do |required|
+                  complete = complete + ";" + remote_function(
+                    :update => "service_status_#{required}",
+                    :url => {
+                      :controler => :services,
+                      :action => :show_status,
+                      :id => required
+                    },
+                    :complete	=> "toggle_service_info ('#{required}')"
+                  )
+                end
+              end
+
+          link_to_remote label,
+            :url	=> url,
+            :loading	=> "disable_buttons('#{service.name}');",
+            :complete   => complete,
+            :html	=> html_options,
+            :update	=> "service_result_#{service.name}"
+          %>
+          <%
+         end
+      end %>
 
       </p>
       <span class='service_result' id='service_result_<%=service.name%>'>
-	<%= render :partial => 'result' %>
+        <%= render :partial => 'result' %>
       </span>
+    </div>
+  </div>
+  <% end %>
+</div>
 
+  <div class="clearfix">&nbsp;</div>
+  
+  <div class="button_container webyast_form" style="margin:5px 15px">
+    <div class="hr">&nbsp;</div>
+      <div class="nav-buttons">
+        <%= form_back_button %>
+      </div>
   </div>
-  </div>
-<% end %>
-</div>
-<div class="nav-buttons">
-  <%= form_back_button %>
-</div>
 </div>
