- WebYast - Filed to link to "Enabling Kerberos Authentication" from help of LDAP authentication (bnc#693927) - webyast-base-ui-0.2.50

--- a/webclient/public/stylesheets/webyast-online-help.css
+++ b/webclient/public/stylesheets/webyast-online-help.css
@@ -96,7 +96,7 @@
 
 #onlineHelpLoading span { text-decoration: blink; color:#474747; font-weight:bold; font-size:20px; vertical-align:middle; text-align:center; }
 #onlineHelpSpinner { height:32px; width:32px; vertical-align:middle; margin-right:5px; }
-#onlineHelpContent div.sect1 { margin: 5px; padding: 20px; }
+#onlineHelpContent div.sect1, #onlineHelpContent div.sect2 { margin: 5px; padding: 20px; }
 #onlineHelpContent h2.title { font-size:16px; line-height:16px; }
 #onlineHelpContent tr.head th { background: none; }
 #onlineHelpContent div.note th:before, div.tip th:before { content:"[Note] "; color:#0C64A8; }
