- fixed "Adminstrator" typo (bnc#696857) - 0.2.12

--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -102,7 +102,7 @@
 
       <div class="fieldset_body">
         <div class="row">
-          <%= label_tag :activedirectory_administrator, _("Adminstrator User Name") %>
+          <%= label_tag :activedirectory_administrator, _("Administrator User Name") %>
           <%= text_field :activedirectory, :administrator, :disabled => disabled, :class => 'required'  %>
         </div>
       </div>
