- WebYast - Failed to configure Kerberos on s390x via webyast (bnc#697059) - 0.2.9

--- a/plugins/kerberos/app/views/kerberos/index.html.erb
+++ b/plugins/kerberos/app/views/kerberos/index.html.erb
@@ -64,6 +64,7 @@
         disable_forms();
           var message = <%= jss _("Please wait") -%>;
           $.modalDialog.wait( {message: message});
+          $('#kerberosForm').submit();
         }
       });
 
