- WebYast - The ball icon in green/red which show the status of the machine show like a square with IE8 (bnc#697369) - Adapted login form style to new WebYaST look

--- a/plugins/software/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_summary.html.erb
@@ -51,7 +51,13 @@
 <%= report_error(error, error_string) if error_type == :unknown %>
 
 <% unless patch %>
-  <% javascript_tag do %>jQuery(function($){ $('#status-eye').addClass('eye_warning'); }); <% end %>
+  <% javascript_tag do %>
+    if($.browser.msie() && $.browser.version.number() == 8 ) {
+      $('#status-eye').css("background", "url(/images/circle-red.png)").addClass('eye_warning');
+    } else {
+      $('#status-eye').addClass('eye_warning');
+    }
+  <% end %>
 
   <div class="statusbar_row">
    	<img src="/images/status-warning.png">
@@ -89,15 +95,20 @@
 
   <% if patch[:security] + patch[:important] > 0 %>
     <% javascript_tag do -%>
-      jQuery(function($){ $('#status-eye').addClass('eye_warning'); });
-      //$('#patches_indicator').addClass("status_warning");
+      if($.browser.msie() && $.browser.version.number() == 8 ) {
+       $('#status-eye').css("background", "url(/images/circle-red.png)").addClass('eye_warning');
+      } else {
+       $('#status-eye').addClass('eye_warning');
+      }
     <% end -%>
   <% else %>
     <% javascript_tag do -%>
-      jQuery(function($){
-        if($('#status-eye').hasClass("eye_warning") == false) { $('#status-eye').addClass('eye_healthy'); }
-        //$('#patches_indicator').addClass("status_ok");
-      });
+      if($('#status-eye').hasClass("eye_warning") == false) { 
+        $('#status-eye').addClass('eye_healthy'); 
+        if($.browser.msie() && $.browser.version.number() == 8 ) {
+          $('#status-eye').css("background", "url(/images/circle-green.png)");  
+        }
+      }
     <% end -%>
   <% end %>
 
