--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -291,19 +291,32 @@ ul li
 /* == Basic Styles ========================================================
 
 #login-dialogue
-  width: 23em
-  /*min-height: 17em; FIXME not working in IE6 | not working anywhere,
-  /*breaks host selection screen --bubli
+  width: 31em
   background: !c_button
-  margin: 10px auto
+  margin: 100px auto
   overflow: hidden
   color: !c_text
-  -moz-border-radius: 5px
-  -webkit-border-radius: 5px
-  -moz-box-shadow: 0 1px 7px !c_button_border
-  -webkit-box-shadow: 0 1px 7px !c_button_border
-  box-shadow: 0 1px 7px !c_button_border
+  border: 1px solid #CCCCCC
+  border-radius: 4px
+  -moz-border-radius: 3px
+  -webkit-border-radius: 3px
+  box-shadow: 0px 0px 10px #ccc
+  -webkit-box-shadow: 0px 0px 10px #ccc
+  background-color: #fafafa
 
+#login_image_wrapper
+  float: left
+  width: 32%
+  height: 140px
+  line-height: 120px
+  overflow: hidden
+ 
+#login_credentials_wrapper
+  float: right
+  width: 68%
+  height: 140px
+  overflow: hidden
+  
 #login_button
   float: right
   width: 100%
@@ -311,20 +324,35 @@ ul li
 #login-dialogue
   form
     display: block
-    background: !c_inverse_text
     padding: 15px
-    margin: 7px
     overflow: hidden
   input
     &[type="password"], &[type="text"]
-      width: 97%
+      width: 95%
+      border-radius: 0px
+      background-color: #fff
+      border: 1px solid #CCCCCC
+      font-weight: normal
+      font-size: 13px
+      line-height: 18px
+  img 
+    width: 96px
+    height: 96px
+    margin-top: 10px
+      
   h2
     margin: 0 !important
-    color: !c_text
+    color: #777777
+    text-shadow: 0 1px 0 #FEFEFE
   label
     display: block
     margin: 0 0 0.2em
     text-align: left
+
+#content_title_details
+  color: #777777
+  font-size: 11px
+  text-shadow: 0px 1px 0px #FEFEFE
 
 /*#status
 /*  width: 70%
