--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -291,17 +291,17 @@ ul li
 /* == Basic Styles ========================================================
 
 #login-dialogue
-  width: 31em
+  width: 24em
   background: !c_button
   margin: 100px auto
   overflow: hidden
   color: !c_text
-  border: 1px solid #CCCCCC
-  border-radius: 4px
+  border: 6px solid #CCCCCC
+  border-radius: 3px
   -moz-border-radius: 3px
   -webkit-border-radius: 3px
-  box-shadow: 0px 0px 10px #ccc
-  -webkit-box-shadow: 0px 0px 10px #ccc
+  /*box-shadow: 0px 0px 2px #ccc inset
+  -webkit-box-shadow: 0px 0px 2px #ccc inset
   background-color: #fafafa
 
 #login_image_wrapper
@@ -313,7 +313,7 @@ ul li
  
 #login_credentials_wrapper
   float: right
-  width: 68%
+  width: 100%
   height: 140px
   overflow: hidden
   
@@ -328,7 +328,10 @@ ul li
     overflow: hidden
   input
     &[type="password"], &[type="text"]
-      width: 95%
+      width: 100%
+      box-sizing: border-box
+      -moz-box-sizing: border-box
+      float:left
       border-radius: 0px
       background-color: #fff
       border: 1px solid #CCCCCC
@@ -342,10 +345,13 @@ ul li
       
   h2
     margin: 0 !important
-    color: #777777
-    text-shadow: 0 1px 0 #FEFEFE
+    color: #555
+    text-shadow: 0 1px 0px #fff
   label
     display: block
+    color: #555
+    text-shadow: 0px 1px 0px #FEFEFE
+    font-weight: bold
     margin: 0 0 0.2em
     text-align: left
 
