--- a/webclient/public/stylesheets/webyast-online-help.css
+++ b/webclient/public/stylesheets/webyast-online-help.css
@@ -75,6 +75,7 @@
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
 
+  background-color:#fafafa;
   background: -moz-linear-gradient(90deg, #fff, #f2f2f2) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f2f2f2));
   border: 2px solid #666;
