--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -39,7 +39,7 @@
 <% content_for :before_script do %>
   <% javascript_tag do %>
     var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
-    startNotifier({'module':'status', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+    startNotifier({'module':'graphs,plugins', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
 
     $(document).ready(function() {
       $(".accordion").accordion({
