- IE8: Webyast cojntrol panel looks ugly (bnc#692861) - 0.2.56

--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -42,16 +42,19 @@
   -moz-border-radius:100%;
   -webkit-border-radius:112px;
 
+  background-color: #eeeeee;
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(#eeeeee), to(#474747));
 }
 
 #status-eye.eye_healthy {
+  background-color: #68b400;
   background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 50, from(#68b400), to(#474747));
 }
 
 #status-eye.eye_warning {
+  background-color: #BB5148;
   background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%);
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(red), to(#474747));
 }
@@ -175,7 +178,7 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 
 #filter {
   border-bottom: 1px solid #CCCCCC;
-/*  background: -moz-linear-gradient(center bottom , #E4E4E4, #EDEDED) repeat scroll 0 0 transparent;*/
+  background: #E1E1E1;
   background: -moz-linear-gradient(center bottom, #E1E1E1, #F0F0F0) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, from(#F0F0F0), to(#E1E1E1));
 
