--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -82,6 +82,7 @@
   color:#555555;
   vertical-align:middle;
   border-bottom: 1px solid #d8d8d8;
+  background: #E4E4E4;
   background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#e4e4e4));
   background: -moz-linear-gradient(center bottom, #e4e4e4, #ededed) repeat scroll 0 0 transparent!important;
   -moz-border-radius-bottomright:0px;
@@ -156,6 +157,7 @@ div.button_container div.nav-buttons { margin:0px 0px; padding:10px 0; }
   -webkit-box-shadow:inset 0px 0px 2px #000;
   text-align:center;
 
+  background: #ffffff;
   background: -moz-linear-gradient(top, #fafafa 0%, #e0e0e0 100%);
   background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#e0e0e0));
   border:1px solid #f5f5f5;
